[package]
name = "inid_rs"
version = "0.1.0"
edition = "2021"
authors = ["Pouria Khakpour <pouria.Khakpour9909@gmail.com>"]
description = "A crate that can generate Iran National Identifier code and even check a INID is valid or not"
repository = "https://github.com/0ne-zero/inid_rs"
readme = "README.md"
keywords = ["iran","inid"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
